--- a/gdl2/Wexner_score_ODS.v1.test.yml
+++ b/gdl2/Wexner_score_ODS.v1.test.yml
@@ -74,6 +74,42 @@ test_cases:
   expected_output:
     1:
       gt0009|Total score: 5
+- id: All inputs 1 point
+  input:
+    1:
+      gt0018|Incontinence to solid stool: 1|local::at0013|Less than once a month|
+      gt0019|Incontinence to liquid stool: 1|local::at0018|Less than once a month|
+      gt0020|Incontinence to gas: 1|local::at0023|Less than once a month|
+      gt0021|Wears pad: 1|local::at0028|Less than once a month|
+      gt0022|Lifestyle alteration: 1|local::at0033|Less than once a month|
+  expected_output:
+    1:
+      gt0024|Wexner score: 5
+      gt0028|Comment: On a scale of 0-20, with 0 = perfect continence and 20 = complete incontinence
+- id: All inputs 2 point
+  input:
+    1:
+      gt0018|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
+      gt0019|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
+      gt0020|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
+      gt0021|Wears pad: 2|local::at0029|Less than once a week but at least once a month|
+      gt0022|Lifestyle alteration: 2|local::at0034|Less than once a week but at least once a month|
+  expected_output:
+    1:
+      gt0024|Wexner score: 10
+      gt0028|Comment: On a scale of 0-20, with 0 = perfect continence and 20 = complete incontinence
+- id: All inputs 3 point
+  input:
+    1:
+      gt0018|Incontinence to solid stool: 3|local::at0015|Less than once a day but at least once a week|
+      gt0019|Incontinence to liquid stool: 3|local::at0020|Less than once a day but at least once a week|
+      gt0020|Incontinence to gas: 3|local::at0025|Less than once a day but at least once a week|
+      gt0021|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
+      gt0022|Lifestyle alteration: 3|local::at0035|Less than once a day but at least once a week|
+  expected_output:
+    1:
+      gt0024|Wexner score: 15
+      gt0028|Comment: On a scale of 0-20, with 0 = perfect continence and 20 = complete incontinence
 - id: All inputs 4 point returns 'Complete incontinence'
   input:
     1:
@@ -86,25 +122,4 @@ test_cases:
     1:
       gt0009|Total score: 20
       gt0011|Interpretation: Complete incontinence
-- id: All inputs 2 point
-  input:
-    1:
-      gt0003|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
-      gt0004|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
-      gt0005|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
-      gt0006|Wears pad: 2|local::at0029|Less than once a week but at least once a month|
-      gt0007|Lifestyle alteration: 2|local::at0034|Less than once a week but at least once a month|
-  expected_output:
-    1:
-      gt0009|Wexner score: 10
-- id: All inputs 3 point
-  input:
-    1:
-      gt0003|Incontinence to solid stool: 3|local::at0015|Less than once a day but at least once a week|
-      gt0004|Incontinence to liquid stool: 3|local::at0020|Less than once a day but at least once a week|
-      gt0005|Incontinence to gas: 3|local::at0025|Less than once a day but at least once a week|
-      gt0006|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
-      gt0007|Lifestyle alteration: 3|local::at0035|Less than once a day but at least once a week|
-  expected_output:
-    1:
-      gt0009|Wexner score: 15
+
