Test Wexner score ODS

--- a/gdl2/Wexner_score_ODS.v1.test.yml
+++ b/gdl2/Wexner_score_ODS.v1.test.yml
@@ -9,71 +9,60 @@ test_cases:
 - id: Incontinence to solid stool missing (negative test)
   input:
     1:
-      gt0004|Incontinence to liquid stool: 0|local::at0017|Never|
-      gt0005|Incontinence to gas: 1|local::at0023|Less than once a month|
-      gt0006|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
-      gt0007|Lifestyle alteration: 4|local::at0036|At least once a day|
+      gt0019|Incontinence to liquid stool: 0|local::at0017|Never|
+      gt0020|Incontinence to gas: 0|local::at0022|Never|
+      gt0021|Wears pad: 1|local::at0028|Less than once a month|
+      gt0022|Lifestyle alteration: 1|local::at0033|Less than once a month|
   expected_output:
     1: {}
 - id: Incontinence to liquid stool missing (negative test)
   input:
     1:
-      gt0003|Incontinence to solid stool: 1|local::at0013|Less than once a month|
-      gt0005|Incontinence to gas: 1|local::at0023|Less than once a month|
-      gt0006|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
-      gt0007|Lifestyle alteration: 4|local::at0036|At least once a day|
+      gt0018|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
+      gt0020|Incontinence to gas: 0|local::at0022|Never|
+      gt0021|Wears pad: 1|local::at0028|Less than once a month|
+      gt0022|Lifestyle alteration: 1|local::at0033|Less than once a month|
   expected_output:
     1: {}
 - id: Incontinence to gas missing (negative test)
   input:
     1:
-      gt0003|Incontinence to solid stool: 1|local::at0013|Less than once a month|
-      gt0004|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
-      gt0006|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
-      gt0007|Lifestyle alteration: 4|local::at0036|At least once a day|
+      gt0018|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
+      gt0019|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
+      gt0021|Wears pad: 1|local::at0028|Less than once a month|
+      gt0022|Lifestyle alteration: 1|local::at0033|Less than once a month|
   expected_output:
     1: {}
 - id: Wears pad missing (negative test)
   input:
     1:
-      gt0003|Incontinence to solid stool: 1|local::at0013|Less than once a month|
-      gt0004|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
-      gt0005|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
-      gt0007|Lifestyle alteration: 4|local::at0036|At least once a day|
+      gt0018|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
+      gt0019|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
+      gt0020|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
+      gt0022|Lifestyle alteration: 1|local::at0033|Less than once a month|
   expected_output:
     1: {}
 - id: Lifestyle alteration missing (negative test)
   input:
     1:
-      gt0003|Incontinence to solid stool: 1|local::at0013|Less than once a month|
-      gt0004|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
-      gt0005|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
-      gt0006|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
+      gt0018|Incontinence to solid stool: 2|local::at0014|Less than once a week but at least once a month|
+      gt0019|Incontinence to liquid stool: 2|local::at0019|Less than once a week but at least once a month|
+      gt0020|Incontinence to gas: 2|local::at0024|Less than once a week but at least once a month|
+      gt0021|Wears pad: 3|local::at0030|Less than once a day but at least once a week|
   expected_output:
     1: {}
-- id: All inputs 0 points returns 'Perfect continence'
+- id: All inputs 0 pointreturns 'Perfect continence'
   input:
     1:
-      gt0003|Incontinence to solid stool: 0|local::at0012|Never|
-      gt0004|Incontinence to liquid stool: 0|local::at0017|Never|
-      gt0005|Incontinence to gas: 0|local::at0022|Never|
-      gt0006|Wears pad: 0|local::at0027|Never|
-      gt0007|Lifestyle alteration: 0|local::at0032|Never|
+      gt0018|Incontinence to solid stool: 0|local::at0012|Never|
+      gt0019|Incontinence to liquid stool: 0|local::at0017|Never|
+      gt0020|Incontinence to gas: 0|local::at0022|Never|
+      gt0021|Wears pad: 0|local::at0027|Never|
+      gt0022|Lifestyle alteration: 0|local::at0032|Never|
   expected_output:
     1:
-      gt0009|Total score: 0
-      gt0011|Interpretation: Perfect continence
-- id: All inputs 1 point
-  input:
-    1:
-      gt0003|Incontinence to solid stool: 1|local::at0013|Less than once a month|
-      gt0004|Incontinence to liquid stool: 1|local::at0018|Less than once a month|
-      gt0005|Incontinence to gas: 1|local::at0023|Less than once a month|
-      gt0006|Wears pad: 1|local::at0028|Less than once a month|
-      gt0007|Lifestyle alteration: 1|local::at0033|Less than once a month|
-  expected_output:
-    1:
-      gt0009|Total score: 5
+      gt0024|Wexner score: 0
+      gt0026|Interpretation: Perfect continence
 - id: All inputs 1 point
   input:
     1:
@@ -110,16 +99,15 @@ test_cases:
     1:
       gt0024|Wexner score: 15
       gt0028|Comment: On a scale of 0-20, with 0 = perfect continence and 20 = complete incontinence
-- id: All inputs 4 point returns 'Complete incontinence'
+- id: All inputs 1 point returns 'Complete incontinence'
   input:
     1:
-      gt0003|Incontinence to solid stool: 4|local::at0016|At leaste once a day|
-      gt0004|Incontinence to liquid stool: 4|local::at0021|At leaste once a day|
-      gt0005|Incontinence to gas: 4|local::at0026|At least once a day|
-      gt0006|Wears pad: 4|local::at0031|At least once a day|
-      gt0007|Lifestyle alteration: 4|local::at0036|At least once a day|
+      gt0018|Incontinence to solid stool: 4|local::at0016|At least once a day|
+      gt0019|Incontinence to liquid stool: 4|local::at0021|At least once a day|
+      gt0020|Incontinence to gas: 4|local::at0026|At least once a day|
+      gt0021|Wears pad: 4|local::at0031|At least once a day|
+      gt0022|Lifestyle alteration: 4|local::at0036|At least once a day|
   expected_output:
     1:
-      gt0009|Total score: 20
-      gt0011|Interpretation: Complete incontinence
-
+      gt0024|Wexner score: 20
+      gt0026|Interpretation: Complete incontinence
