--- a/gdl2/MoCA_guideline.v1.test.yml
+++ b/gdl2/MoCA_guideline.v1.test.yml
@@ -1,6 +1,32 @@
 guidelines:
   1: MoCA_guideline.v1
 test_cases:
+- id: score 0
+  input:
+    1:
+      gt0003|Does patient have more than a 12th grade education?: 0|local::at0005|Yes|
+      gt0004|Ask patient to trace the diagram in order: 0|local::at0010|Did not complete correctly|
+      gt0005|Ask patient to copy cube: 0|local::at0013|Did not complete correctly|
+      gt0006|Ask patient to draw a clock (ten past eleven): 0|local::at0020|None of the above|
+      gt0007|Ask patient to name the first animal: 0|local::at0024|Did not name lion|
+      gt0008|Ask patient to name the second animal: 0|local::at0027|Did not name rhinoceros|
+      gt0009|Ask patient to name the third animal: 0|local::at0030|Did not name camel|
+      gt0010|Read Face, Velvet, Church, Daisy, Red, and ask patient to repeat (do two trials and a recall later in exam): local::at0033|Completed both trials correctly|
+      gt0011|Read list of digits (2, 1, 8, 5, 4) at 1 digit/sec and ask patient to repeat them in the forward order: 0|local::at0038|Did not repeat correctly|
+      gt0012|Read list of digits (7, 4, 2) at 1 digit/sec and ask patient to repeat them in the backward order: 0|local::at0041|Did not repeat correctly|
+      gt0013|Read list of letters and ask patient to tap with their hand at each letter A FBAC MNAA JKLB AFAK DEAA AJAM OFAAB: 0|local::at0044|≥2 errors|
+      gt0014|Ask patient to do five serial 7 subtractions starting at 100; patient should say 93, 86, 79, 72, 65: 0|local::at0049|0 correct|
+      gt0015|Read and ask patient to repeat I only know that John is the one to help today: 0|local::at0052|Did not repeat correctly|
+      gt0016|Read and ask patient to repeat The cat always hid under the couch when dogs were in the room: 0|local::at0055|Did not repeat correctly|
+      gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 0|local::at0058|Named <11 words|
+      gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 0|local::at0062|Did not answer correctly|
+      gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 0|local::at0065|Did not answer correctly|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted Face, Velvet, Church, Daisy, Red: 0|local::at0069|Did not recall any words|
+      gt0021|Ask patient the date, month, year, day, place, and city: 0|local::at0077|None correct|
+  expected_output:
+    1:
+      gt0026|Comment: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
+      gt0023|Total score: 0
 - id: score 31
   input:
     1:
@@ -11,7 +37,7 @@ test_cases:
       gt0007|Ask patient to name the first animal: 1|local::at0023|Named lion|
       gt0008|Ask patient to name the second animal: 1|local::at0026|Named rhinoceros|
       gt0009|Ask patient to name the third animal: 1|local::at0029|Named camel|
-      gt0010|Read Face, Velvet, Church, Daisy, Red, and ask patient to repeat (do two trials and a recall later in exam): local::at0033|Completed both trials correctly|
+      gt0010|Read Face, Velvet, Church, Daisy, Red, and ask patient to repeat (do two trials and a recall later in exam): local::at0034|Did not complete both trials correctly|
       gt0011|Read list of digits (2, 1, 8, 5, 4) at 1 digit/sec and ask patient to repeat them in the forward order: 1|local::at0037|Repeated correctly|
       gt0012|Read list of digits (7, 4, 2) at 1 digit/sec and ask patient to repeat them in the backward order: 1|local::at0040|Repeated correctly|
       gt0013|Read list of letters and ask patient to tap with their hand at each letter A FBAC MNAA JKLB AFAK DEAA AJAM OFAAB: 1|local::at0043|<2 errors|
@@ -21,9 +47,9 @@ test_cases:
       gt0017|Ask patient to name maximum number of words in 1 minute that begin with the letter F: 1|local::at0059|Named ≥11 words|
       gt0018|Ask patient similarity between train and bicycle (e.g. both are modes of transportation): 1|local::at0063|Answered correctly|
       gt0019|Ask patient similarity between watch and ruler (e.g. both are measuring tools): 1|local::at0066|Answered correctly|
-      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted Face, Velvet, Church, Daisy, Red: 5|local::at0074|Recalled all words|
+      gt0020|Ask patient to recall the words with no cue from the memory test previously conducted (Face, Velvet, Church, Daisy, Red): 5|local::at0074|Recalled all words|
       gt0021|Ask patient the date, month, year, day, place, and city: 6|local::at0083|All correct|
   expected_output:
     1:
-      gt0024|Comment: local::at0086|Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer's disease|
+      gt0026|Comment: Lower scores indicate more cognitive impairment and cutoff of <26 points is 90% sensitive for mild cognitive impairment and 100% sensitive for Alzheimer
       gt0023|Total score: 31
