Test Rule of 7s

--- a/gdl2/Rule_of_7s_for_lyme_meningitis.v1.test.yml
+++ b/gdl2/Rule_of_7s_for_lyme_meningitis.v1.test.yml
@@ -4,21 +4,21 @@ test_cases:
 - id: Low risk for Lyme meningitis
   input:
     1:
-      gt0012|Number of days of headache: 0|local::at0003|<7|
-      gt0013|CSF mononuclear cells: 0|local::at0007|<70%|
-      gt0014|7th (or other) cranial nerve palsy: 0|local::at0009|No|
+      gt0017|Number of days of headache: 0|local::at0003|<7|
+      gt0018|CSF mononuclear cells: 0|local::at0007|<70%|
+      gt0019|7th (or other) cranial nerve palsy: 0|local::at0009|No|
   expected_output:
     1:
-      gt0016|Risk: local::at0013|Low risk for Lyme meningitis|
-      gt0015|Rule of 7s: 0
+      gt0023|Risk: local::at0013|Low risk for Lyme meningitis|
+      gt0022|Total score: 0
 
 - id: Not low risk for Lyme meningitis
   input:
     1:
-      gt0012|Number of days of headache: 1|local::at0004|≥7|
-      gt0013|CSF mononuclear cells: 1|local::at0008|≥70%|
-      gt0014|7th (or other) cranial nerve palsy: 0|local::at0009|No|
+      gt0017|Number of days of headache: 1|local::at0004|≥7|
+      gt0018|CSF mononuclear cells: 1|local::at0008|≥70%|
+      gt0019|7th (or other) cranial nerve palsy: 0|local::at0009|No|
   expected_output:
     1:
-      gt0016|Risk: local::at0014|Not low risk for Lyme meningitis|
-      gt0015|Rule of 7s: 2
+      gt0023|Risk: local::at0014|Not low risk for Lyme meningitis|
+      gt0022|Total score: 2
