--- a/gdl2/Recognition_of_stroke_in_the_emergency_room_ROSIER_scale.v1.test.yml
+++ b/gdl2/Recognition_of_stroke_in_the_emergency_room_ROSIER_scale.v1.test.yml
@@ -4,29 +4,30 @@ test_cases:
 - id: Stroke unlikely
   input:
     1:
-      gt0025|Loss of consciousness or syncope: 0|local::at0003|No|
-      gt0026|Seizure activity: 0|local::at0006|No|
-      gt0027|Asymmetric facial weakness: 0|local::at0009|No|
-      gt0028|Asymmetric arm weakness: 0|local::at0012|No|
-      gt0029|Asymmetric leg weakness: 0|local::at0015|No|
+      gt0025|Loss of consciousness or syncope: 0|local::at0005|No|
+      gt0026|Seizure activity: 0|local::at0008|No|
+      gt0027|Asymmetric facial weakness: 0|local::at0011|No|
+      gt0028|Asymmetric arm weakness: 0|local::at0014|No|
+      gt0029|Asymmetric leg weakness: 0|local::at0024|No|
       gt0030|Speech disturbance: 0|local::at0018|No|
       gt0031|Visual field defect: 0|local::at0021|No|
   expected_output:
     1:
-      gt0033|Likelihood of stroke: local::at0025|Stroke unlikely|
       gt0034|Total score: 0
+      gt0033|Likelihood of stroke: local::at0025|Stroke unlikely|
 
 - id: Stroke possible
   input:
     1:
-      gt0025|Loss of consciousness or syncope: 0|local::at0003|No|
-      gt0026|Seizure activity: 0|local::at0006|No|
-      gt0027|Asymmetric facial weakness: 0|local::at0009|No|
-      gt0028|Asymmetric arm weakness: 1|local::at0013|Yes|
-      gt0029|Asymmetric leg weakness: 0|local::at0015|No|
-      gt0030|Speech disturbance: 1|local::at0019|Yes|
+      gt0025|Loss of consciousness or syncope: 0|local::at0005|No|
+      gt0026|Seizure activity: 0|local::at0008|No|
+      gt0027|Asymmetric facial weakness: 0|local::at0011|No|
+      gt0028|Asymmetric arm weakness: 1|local::at0015|Yes|
+      gt0029|Asymmetric leg weakness: 1|local::at0025|Yes|
+      gt0030|Speech disturbance: 0|local::at0018|No|
       gt0031|Visual field defect: 0|local::at0021|No|
   expected_output:
     1:
-      gt0033|Likelihood of stroke: local::at0026|Stroke possible|
       gt0034|Total score: 2
+      gt0033|Likelihood of stroke: local::at0026|Stroke possible|
+
