--- a/gdl2/Solitary_Pulmonary_Nodule_Malignancy.v0.test.yml
+++ b/gdl2/Solitary_Pulmonary_Nodule_Malignancy.v0.test.yml
@@ -87,77 +87,78 @@ test_cases:
   input:
     1:
       gt0003|Age: 50,a
-      gt0006|Current or former smoker: 0|local::at0008|No|
+      gt0006|Current or former smoker: 1|local::at0009|Yes|
       gt0007|Extrathoracic cancer diagnosis ≥5 years prior: 0|local::at0011|No|
       gt0008|Upper lobe location of tumor: 0|local::at0014|No|
-      gt0010|Nodule spiculation: 1|local::at0018|Yes|
+      gt0010|Nodule spiculation: 0|local::at0017|No|
       gt0011|FDG-PET: local::at0023|PET not performed|
-      gt0028|Nodule diameter: 40,mm
+      gt0028|Nodule diameter: 43,mm
   expected_output:
     1:
-      gt0018|x: 1.26450
-      gt0013|Probability of malignancy: 78.0,%
+      gt0031|x: 1.39770
+      gt0033|Probability of malignancy: 80.2,%
 - id: No uptake returns 'Probability of malignancy with FDG-PET:...'
   input:
     1:
       gt0003|Age: 50,a
-      gt0006|Current or former smoker: 0|local::at0008|No|
+      gt0006|Current or former smoker: 1|local::at0009|Yes|
       gt0007|Extrathoracic cancer diagnosis ≥5 years prior: 0|local::at0011|No|
       gt0008|Upper lobe location of tumor: 0|local::at0014|No|
-      gt0010|Nodule spiculation: 1|local::at0018|Yes|
+      gt0010|Nodule spiculation: 0|local::at0017|No|
       gt0011|FDG-PET: local::at0024|No uptake|
-      gt0028|Nodule diameter: 40,mm
+      gt0028|Nodule diameter: 43,mm
   expected_output:
     1:
-      gt0018|x: 1.26450
-      gt0019|y: -1.86002
-      gt0014|Probability of malignancy with FDG-PET: 13.5,%
-      gt0013|Probability of malignancy: 78.0,%
-- id:  Intense uptake returns 'Probability of malignancy with FDG-PET:...'
+      gt0031|x: 1.39770
+      gt0033|Probability of malignancy: 80.2,%
+      gt0034|Probability of malignancy with FDG-PET: 14.4,%
+      gt0032|y: -1.77882
+- id: Intense uptake returns 'Probability of malignancy with FDG-PET:...'
   input:
     1:
       gt0003|Age: 50,a
-      gt0006|Current or former smoker: 0|local::at0008|No|
+      gt0006|Current or former smoker: 1|local::at0009|Yes|
       gt0007|Extrathoracic cancer diagnosis ≥5 years prior: 0|local::at0011|No|
       gt0008|Upper lobe location of tumor: 0|local::at0014|No|
-      gt0010|Nodule spiculation: 1|local::at0018|Yes|
+      gt0010|Nodule spiculation: 0|local::at0017|No|
       gt0011|FDG-PET: local::at0027|Intense uptake|
-      gt0028|Nodule diameter: 40,mm
+      gt0028|Nodule diameter: 43,mm
   expected_output:
     1:
-      gt0018|x: 1.26450
-      gt0019|y: 2.91098
-      gt0014|Probability of malignancy with FDG-PET: 94.8,%
-      gt0013|Probability of malignancy: 78.0,%
+      gt0031|x: 1.39770
+      gt0033|Probability of malignancy: 80.2,%
+      gt0034|Probability of malignancy with FDG-PET: 95.2,%
+      gt0032|y: 2.99218
 - id: Faint uptake returns 'Probability of malignancy with FDG-PET:...'
   input:
     1:
       gt0003|Age: 50,a
-      gt0006|Current or former smoker: 0|local::at0008|No|
+      gt0006|Current or former smoker: 1|local::at0009|Yes|
       gt0007|Extrathoracic cancer diagnosis ≥5 years prior: 0|local::at0011|No|
       gt0008|Upper lobe location of tumor: 0|local::at0014|No|
-      gt0010|Nodule spiculation: 1|local::at0018|Yes|
+      gt0010|Nodule spiculation: 0|local::at0017|No|
       gt0011|FDG-PET: local::at0025|Faint uptake|
-      gt0028|Nodule diameter: 40,mm
+      gt0028|Nodule diameter: 43,mm
   expected_output:
     1:
-      gt0018|x: 1.26450
-      gt0019|y: 0.46198
-      gt0014|Probability of malignancy with FDG-PET: 61.3,%
-      gt0013|Probability of malignancy: 78.0,%
+      gt0031|x: 1.39770
+      gt0033|Probability of malignancy: 80.2,%
+      gt0034|Probability of malignancy with FDG-PET: 63.3,%
+      gt0032|y: 0.54318
 - id: Moderate uptake returns 'Probability of malignancy with FDG-PET:...'
   input:
     1:
       gt0003|Age: 50,a
-      gt0006|Current or former smoker: 0|local::at0008|No|
+      gt0006|Current or former smoker: 1|local::at0009|Yes|
       gt0007|Extrathoracic cancer diagnosis ≥5 years prior: 0|local::at0011|No|
       gt0008|Upper lobe location of tumor: 0|local::at0014|No|
-      gt0010|Nodule spiculation: 1|local::at0018|Yes|
+      gt0010|Nodule spiculation: 0|local::at0017|No|
       gt0011|FDG-PET: local::at0026|Moderate uptake|
-      gt0028|Nodule diameter: 40,mm
+      gt0028|Nodule diameter: 43,mm
   expected_output:
     1:
-      gt0018|x: 1.26450
-      gt0019|y: 2.75698
-      gt0014|Probability of malignancy with FDG-PET: 94.0,%
-      gt0013|Probability of malignancy: 78.0,%
+      gt0031|x: 1.39770
+      gt0033|Probability of malignancy: 80.2,%
+      gt0034|Probability of malignancy with FDG-PET: 94.5,%
+      gt0032|y: 2.83818
+
