--- a/gdl2/mRECIST.v0.yml
+++ b/gdl2/mRECIST.v0.yml
@@ -1,90 +1,81 @@
 guidelines:
   1: mRECIST.v0
 test_cases:
-- id: Test no input
+- id: Test default action
   input:
     1: {}
   expected_output:
-    1: {}
-- id: Tumor 1 size at baseline missing (negative test)
-  input:
     1:
-      gt0004|Tumor 1 current size: 10,mm
-  expected_output:
-    1: {}
-- id: Tumor 1 current size missing (negative test)
-  input:
-    1:
-      gt0003|Tumor 1 size at baseline: 30,mm
-  expected_output:
-    1: {}
+      gt0014|Interpretation: Stable disease
 - id: Test interpretation for Tumor 1
   input:
     1:
-      gt0003|Tumor 1 size at baseline: 54,mm
-      gt0004|Tumor 1 current size: 45,mm
+      gt0003|Tumor 1 size at baseline: 15,mm
+      gt0004|Tumor 1 current size: 17,mm
   expected_output:
     1:
       gt0014|Interpretation: Stable disease
-      gt0024|Total size at baseline: 54
-      gt0025|Total current size: 45
-- id: Test interpretation for Tumor 1 & 2
+      gt0024|Total size at baseline: 15,mm
+      gt0025|Total current size: 17,mm
+- id: Test interpretation for Tumor 1, 2
   input:
     1:
-      gt0003|Tumor 1 size at baseline: 54,mm
-      gt0004|Tumor 1 current size: 45,mm
-      gt0005|Tumor 2 size at baseline: 40,mm
-      gt0006|Tumor 2 current size: 20,mm
-  expected_output:
-    1:
-      gt0014|Interpretation: Partial response
-      gt0024|Total size at baseline: 94
-      gt0025|Total current size: 65
-- id: Test interpretation for Tumor 1, 2 & 3
-  input:
-    1:
-      gt0003|Tumor 1 size at baseline: 54,mm
-      gt0004|Tumor 1 current size: 45,mm
-      gt0005|Tumor 2 size at baseline: 40,mm
-      gt0006|Tumor 2 current size: 20,mm
-      gt0007|Tumor 3 size at baseline: 10,mm
-      gt0008|Tumor 3 current size: 40,mm
+      gt0003|Tumor 1 size at baseline: 15,mm
+      gt0004|Tumor 1 current size: 17,mm
+      gt0005|Tumor 2 size at baseline: 30,mm
+      gt0006|Tumor 2 current size: 25,mm
   expected_output:
     1:
       gt0014|Interpretation: Stable disease
-      gt0024|Total size at baseline: 104
-      gt0025|Total current size: 105
-- id: Test interpretation for Tumor 1, 2, 3 & 4
+      gt0024|Total size at baseline: 45,mm
+      gt0025|Total current size: 42,mm
+- id: Test interpretation for Tumor 1, 2, 3
   input:
     1:
-      gt0003|Tumor 1 size at baseline: 54,mm
-      gt0004|Tumor 1 current size: 45,mm
-      gt0005|Tumor 2 size at baseline: 40,mm
-      gt0006|Tumor 2 current size: 20,mm
-      gt0007|Tumor 3 size at baseline: 10,mm
-      gt0008|Tumor 3 current size: 40,mm
-      gt0009|Tumor 4 size at baseline: 9,mm
-      gt0010|Tumor 4 current size: 50,mm
+      gt0003|Tumor 1 size at baseline: 15,mm
+      gt0004|Tumor 1 current size: 17,mm
+      gt0005|Tumor 2 size at baseline: 30,mm
+      gt0006|Tumor 2 current size: 25,mm
+      gt0007|Tumor 3 size at baseline: 12,mm
+      gt0008|Tumor 3 current size: 50,mm
   expected_output:
     1:
       gt0014|Interpretation: Progressive disease
-      gt0024|Total size at baseline: 113
-      gt0025|Total current size: 155
-- id: Test interpretation for Tumor 1, 2, 3, 4 & 5
+      gt0024|Total size at baseline: 57,mm
+      gt0025|Total current size: 92,mm
+- id: Test interpretation for Tumor 1, 2, 3, 4
   input:
     1:
-      gt0003|Tumor 1 size at baseline: 54,mm
-      gt0004|Tumor 1 current size: 45,mm
-      gt0005|Tumor 2 size at baseline: 40,mm
-      gt0006|Tumor 2 current size: 20,mm
-      gt0007|Tumor 3 size at baseline: 10,mm
-      gt0008|Tumor 3 current size: 40,mm
-      gt0009|Tumor 4 size at baseline: 9,mm
-      gt0010|Tumor 4 current size: 50,mm
-      gt0011|Tumor 5 size at baseline: 30,mm
-      gt0012|Tumor 5 current size: 12,mm
+      gt0003|Tumor 1 size at baseline: 15,mm
+      gt0004|Tumor 1 current size: 17,mm
+      gt0005|Tumor 2 size at baseline: 30,mm
+      gt0006|Tumor 2 current size: 25,mm
+      gt0007|Tumor 3 size at baseline: 12,mm
+      gt0008|Tumor 3 current size: 50,mm
+      gt0009|Tumor 4 size at baseline: 40,mm
+      gt0010|Tumor 4 current size: 40,mm
+  expected_output:
+    1:
+      gt0014|Interpretation: Progressive disease
+      gt0024|Total size at baseline: 97,mm
+      gt0025|Total current size: 132,mm
+- id: Test interpretation for Tumor 1, 2, 3, 4, 5
+  input:
+    1:
+      gt0003|Tumor 1 size at baseline: 15,mm
+      gt0004|Tumor 1 current size: 17,mm
+      gt0005|Tumor 2 size at baseline: 30,mm
+      gt0006|Tumor 2 current size: 25,mm
+      gt0007|Tumor 3 size at baseline: 12,mm
+      gt0008|Tumor 3 current size: 50,mm
+      gt0009|Tumor 4 size at baseline: 40,mm
+      gt0010|Tumor 4 current size: 40,mm
+      gt0011|Tumor 5 size at baseline: 20,mm
+      gt0012|Tumor 5 current size: 0,mm
   expected_output:
     1:
       gt0014|Interpretation: Stable disease
-      gt0024|Total size at baseline: 143
-      gt0025|Total current size: 167
+      gt0024|Total size at baseline: 117,mm
+      gt0025|Total current size: 132,mm
+
+
