--- a/gdl2/Sokal_Index_for_CML.v0.test.yml
+++ b/gdl2/Sokal_Index_for_CML.v0.test.yml
@@ -38,7 +38,7 @@ test_cases:
       gt0005|% myeloblasts: 30,%
   expected_output:
     1: {}
-- id: Score<0.8 returns 'Risk Group: Low'
+- id: Test Risk Group Low
   input:
     1:
       gt0003|Age: 1,a
@@ -51,7 +51,7 @@ test_cases:
       gt0011|Risk Group: local::at0004|Low|
       gt0014|Median Survival: local::at0012|5 years|
       gt0020|Sokal score: 0.4
-- id: Score>1.2 returns 'Risk Group: High'
+- id: Test Risk Group High
   input:
     1:
       gt0003|Age: 50,a
@@ -64,7 +64,7 @@ test_cases:
       gt0011|Risk Group: local::at0006|High|
       gt0014|Median Survival: local::at0014|2.5 years|
       gt0020|Sokal score: 4.4
-- id: Score 0.8-1.2 returns 'Risk Group: Intermediate'
+- id: Test Risk Group Intermediate
   input:
     1:
       gt0003|Age: 20,a
@@ -77,3 +77,16 @@ test_cases:
       gt0011|Risk Group: local::at0005|Intermediate|
       gt0014|Median Survival: local::at0013|2.5-5 years|
       gt0020|Sokal score: 1.2
+- id: Test Conversion Factor
+  input:
+    1:
+      gt0003|Age: 20,a
+      'gt0004|Spleen size ': 10,[in_i]
+      gt0005|% myeloblasts: 9,%
+      gt0007|Platelet count: 150,10*9/l
+  expected_output:
+    1:
+      gt0013|2-year Survival: local::at0010|65%|
+      gt0011|Risk Group: local::at0006|High|
+      gt0014|Median Survival: local::at0014|2.5 years|
+      gt0020|Sokal score: 2.4
