Test Stool Osm Gap

--- a/gdl2/Stool_Osmotic_Gap.v0.test.yml
+++ b/gdl2/Stool_Osmotic_Gap.v0.test.yml
@@ -27,3 +27,12 @@ test_cases:
       'gt0005|Stool sodium ': 40,mg/dl
   expected_output:
     1: {}
+- id: Test calculation of stool osm gap
+  input:
+    1:
+      gt0003|Stool osmolarity: 290,mmol/L
+      'gt0005|Stool sodium ': 180,mmol/l
+      'gt0006|Stool potassium ': 200,mmol/l
+  expected_output:
+    1:
+      gt0008|Stool Osmolal Gap: -470,mOsm/kg
