Test VACS Index

--- a/gdl2/VACS_Index.v0.test.yml
+++ b/gdl2/VACS_Index.v0.test.yml
@@ -83,7 +83,7 @@ test_cases:
       gt0008|eGFR: 6|local::at0031|45 - 59.9 mL/min|
   expected_output:
     1: {}
-- id: All inputs 0 point returns Total score: 0
+- id: All inputs 0 point 
   input:
     1:
       gt0003|Age: 0|local::at0006|< 50 years|
@@ -96,7 +96,7 @@ test_cases:
   expected_output:
     1:
       gt0011|Total score: 0
-- id: All inputs max point returns Total score: 164
+- id: All inputs max point 
   input:
     1:
       gt0003|Age: 27|local::at0008|>= 65 years|
