Test ASCVD Risk Calculator

--- a/gdl2/ASCVD_risk.v0.test.yml
+++ b/gdl2/ASCVD_risk.v0.test.yml
@@ -11,115 +11,259 @@ test_cases:
     1:
       gt0017|HDL Cholesterol: 40,mmol/l
       gt0018|Total Cholesterol: 13,mmol/l
-      gt0025|Age: 40,a
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: HDL Cholesterol missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
+      gt0015|Systolic blood pressure: 120,mm[Hg]
       gt0018|Total Cholesterol: 13,mmol/l
-      gt0025|Age: 40,a
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: Total Cholesterol missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0025|Age: 40,a
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: Age missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
-  expected_output:
-    1: {}
-- id: Race missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
-      gt0025|Age: 40,a
-      gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
-  expected_output:
-    1: {}
-- id: Treatment for hypertension missing (negative test)
-  input:
-    1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
-      gt0025|Age: 40,a
-      gt0026|Race: local::at0011|White|
-      gt0028|Sex: local::at0036|Male|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: Sex missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
-      gt0025|Age: 40,a
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
       gt0026|Race: local::at0011|White|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0029|Diabetes: 0|local::at0038|No|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+  expected_output:
+    1: {}
+- id: Treatment for hypertension missing (negative test)
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
+      gt0026|Race: local::at0011|White|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1: {}
+- id: Race missing (negative test)
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: Diabetes missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
-      gt0025|Age: 40,a
-      gt0026|Race: local::at0011|White|
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
+      gt0026|Race: local::at0013|Other|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
-      gt0030|Smoker: 1|local::at0042|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
 - id: Smoker missing (negative test)
   input:
     1:
-      gt0015|Systolic blood pressure: 200,mm[Hg]
-      gt0017|HDL Cholesterol: 50,mmol/l
-      gt0018|Total Cholesterol: 100,mmol/l
-      gt0025|Age: 40,a
-      gt0026|Race: local::at0011|White|
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 40,mmol/l
+      gt0018|Total Cholesterol: 13,mmol/l
+      gt0026|Race: local::at0013|Other|
       gt0027|Treatment for hypertension: local::at0033|Yes|
-      gt0028|Sex: local::at0036|Male|
       gt0029|Diabetes: 0|local::at0038|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
   expected_output:
     1: {}
+- id: Test conversion factor
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0013|Other|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 0|local::at0038|No|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0052|Individual sum: -17.41
+      gt0053|Estimated 10-y risk: 33.1,%
+- id: White woman with treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0011|White|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0052|Individual sum: -16.46
+      gt0053|Estimated 10-y risk: 35.2,%
+- id: White woman no treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0011|White|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0052|Individual sum: -16.75
+      gt0053|Estimated 10-y risk: 34.6,%
+- id: African American woman no treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0052|Individual sum: 101.87
+      gt0053|Estimated 10-y risk: 51.8,%
+- id: African American woman with treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0006|Female|
+  expected_output:
+    1:
+      gt0052|Individual sum: 102.82
+      gt0053|Estimated 10-y risk: 53.9,%
+- id: African American man with treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0052|Individual sum: 21.43
+      gt0053|Estimated 10-y risk: 18.8,%
+- id: African American man no treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0012|African American|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0052|Individual sum: 20.92
+      gt0053|Estimated 10-y risk: 14.1,%
+- id: White man no treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0011|White|
+      gt0027|Treatment for hypertension: local::at0032|No|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0052|Individual sum: 69.69
+      gt0053|Estimated 10-y risk: 53.3,%
+- id: White man with treatment
+  input:
+    1:
+      gt0015|Systolic blood pressure: 120,mm[Hg]
+      gt0017|HDL Cholesterol: 0.05,mg/dl
+      gt0018|Total Cholesterol: 193,mg/dl
+      gt0026|Race: local::at0011|White|
+      gt0027|Treatment for hypertension: local::at0033|Yes|
+      gt0029|Diabetes: 1|local::at0039|Yes|
+      gt0030|Smoker: 0|local::at0041|No|
+      gt0055|Age: 40,a
+      gt0056|Sex: local::at0005|Male|
+  expected_output:
+    1:
+      gt0052|Individual sum: 69.84
+      gt0053|Estimated 10-y risk: 53.9,%
