Test VACS Index

--- a/gdl2/VACS_Index.v0.test.yml
+++ b/gdl2/VACS_Index.v0.test.yml
@@ -6,106 +6,45 @@ test_cases:
     1: {}
   expected_output:
     1: {}
-- id: Age missing (negative test)
+- id: All inputs 0 point
   input:
     1:
-      gt0004|CD4 count: 6|local::at0011|350 - 499 cells/mm^3|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0006|Hemoglobin: 10|local::at0022|12 - 13.9 g/dL|
-      gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
-      gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: CD4 count missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0006|Hemoglobin: 10|local::at0022|12 - 13.9 g/dL|
-      gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
-      gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: HIV-1 RNA missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0004|CD4 count: 6|local::at0012|200 - 349 cells/mm^3|
-      gt0006|Hemoglobin: 10|local::at0022|12 - 13.9 g/dL|
-      gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
-      gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: Hemoglobin missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0004|CD4 count: 6|local::at0012|200 - 349 cells/mm^3|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
-      gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: FIB-4 Index missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0004|CD4 count: 6|local::at0012|200 - 349 cells/mm^3|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0006|Hemoglobin: 22|local::at0023|10 - 11.9 g/dL|
-      gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: eGFR missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0004|CD4 count: 6|local::at0012|200 - 349 cells/mm^3|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0006|Hemoglobin: 22|local::at0023|10 - 11.9 g/dL|
-      gt0007|FIB-4 Index: 6|local::at0027|1.45 - 3.25|
-      gt0009|Hepatitis C co-infection: 0|local::at0035|No|
-  expected_output:
-    1: {}
-- id: Hepatitis C co-infection missing (negative test)
-  input:
-    1:
-      gt0003|Age: 12|local::at0007|50 - 64 years|
-      gt0004|CD4 count: 6|local::at0012|200 - 349 cells/mm^3|
-      gt0005|HIV-1 RNA: 7|local::at0018|500 - 99,999 copies/mL|
-      gt0006|Hemoglobin: 22|local::at0023|10 - 11.9 g/dL|
-      gt0007|FIB-4 Index: 6|local::at0027|1.45 - 3.25|
-      gt0008|eGFR: 6|local::at0031|45 - 59.9 mL/min|
-  expected_output:
-    1: {}
-- id: All inputs 0 point 
-  input:
-    1:
-      gt0003|Age: 0|local::at0006|< 50 years|
       gt0004|CD4 count: 0|local::at0010|>= 500 cells/mm^3|
       gt0005|HIV-1 RNA: 0|local::at0017|< 500 copies/mL|
       gt0006|Hemoglobin: 0|local::at0021|>= 14 g/dL|
       gt0007|FIB-4 Index: 0|local::at0026|< 1.45|
       gt0008|eGFR: 0|local::at0030|>= 60 mL/min|
       gt0009|Hepatitis C co-infection: 0|local::at0035|No|
+      gt0014|Age: 45,a
   expected_output:
     1:
+      gt0015|Age: 0|local::at0006|< 50 years|
       gt0011|Total score: 0
-- id: All inputs max point 
+- id: All inputs max point
   input:
     1:
-      gt0003|Age: 27|local::at0008|>= 65 years|
       gt0004|CD4 count: 29|local::at0015|< 50 cells/mm^3|
       gt0005|HIV-1 RNA: 14|local::at0019|>= 100000 copies/mL|
       gt0006|Hemoglobin: 38|local::at0024|< 10 g/dL|
       gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
       gt0008|eGFR: 26|local::at0033|< 30 mL/min|
       gt0009|Hepatitis C co-infection: 5|local::at0036|Yes|
+      gt0014|Age: 67,a
   expected_output:
     1:
+      gt0015|Age: 27|local::at0008|>= 65 years|
       gt0011|Total score: 164
+- id: Test Age range 50-64
+  input:
+    1:
+      gt0004|CD4 count: 29|local::at0015|< 50 cells/mm^3|
+      gt0005|HIV-1 RNA: 14|local::at0019|>= 100000 copies/mL|
+      gt0006|Hemoglobin: 38|local::at0024|< 10 g/dL|
+      gt0007|FIB-4 Index: 25|local::at0028|> 3.25|
+      gt0008|eGFR: 26|local::at0033|< 30 mL/min|
+      gt0009|Hepatitis C co-infection: 5|local::at0036|Yes|
+      gt0014|Age: 55,a
+  expected_output:
+    1:
+      gt0015|Age: 12|local::at0007|50 - 64 years|
+      gt0011|Total score: 149
