Test NEDOCS score
Renamed Total score to NEDOCS score.

--- a/gdl2/NEDOCS_score_for_emergency_department_overcrowding.v1.test.yml
+++ b/gdl2/NEDOCS_score_for_emergency_department_overcrowding.v1.test.yml
@@ -20,7 +20,7 @@ test_cases:
       gt0020|Points for registration time: 4,1
       gt0017|Points for patindex: 7,1
       gt0018|Points for admit index: 2,1
-      gt0016|Total score: 13,1
+      gt0016|NEDOCS score: 13,1
 
 - id: Busy
   input:
@@ -41,7 +41,7 @@ test_cases:
       gt0020|Points for registration time: 4,1
       gt0017|Points for patindex: 10,1
       gt0018|Points for admit index: 7,1
-      gt0016|Total score: 24,1
+      gt0016|NEDOCS score: 24,1
 
 - id: Extremely busy but not overcrowded
   input:
@@ -62,7 +62,7 @@ test_cases:
       gt0020|Points for registration time: 8,1
       gt0017|Points for patindex: 36,1
       gt0018|Points for admit index: 21,1
-      gt0016|Total score: 99,1
+      gt0016|NEDOCS score: 99,1
 
 - id: Overcrowded
   input:
@@ -83,7 +83,7 @@ test_cases:
       gt0020|Points for registration time: 4,1
       gt0017|Points for patindex: 42,1
       gt0018|Points for admit index: 39,1
-      gt0016|Total score: 127,1
+      gt0016|NEDOCS score: 127,1
 
 - id: Severly overcrowded
   input:
@@ -104,7 +104,7 @@ test_cases:
       gt0020|Points for registration time: 8,1
       gt0017|Points for patindex: 57,1
       gt0018|Points for admit index: 31,1
-      gt0016|Total score: 142,1
+      gt0016|NEDOCS score: 142,1
 
 - id: Dangerously overcrowded
   input:
@@ -125,4 +125,4 @@ test_cases:
       gt0020|Points for registration time: 4,1
       gt0017|Points for patindex: 219,1
       gt0018|Points for admit index: 13,1
-      gt0016|Total score: 200,1
+      gt0016|NEDOCS score: 200,1
