Test Rule of 7s
Updated name of Total score to Rule of 7s

--- a/gdl2/Rule_of_7s_for_lyme_meningitis.v1.test.yml
+++ b/gdl2/Rule_of_7s_for_lyme_meningitis.v1.test.yml
@@ -10,7 +10,7 @@ test_cases:
   expected_output:
     1:
       gt0023|Risk: local::at0013|Low risk for Lyme meningitis|
-      gt0022|Total score: 0
+      gt0022|Rule of 7s: 0
 
 - id: Not low risk for Lyme meningitis
   input:
@@ -21,4 +21,4 @@ test_cases:
   expected_output:
     1:
       gt0023|Risk: local::at0014|Not low risk for Lyme meningitis|
-      gt0022|Total score: 2
+      gt0022|Rule of 7s: 2
